--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>You Deserve A Break!</title>
+    <title>Self-Care Timer 💖⏰</title>
 </head>
 <body>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
+
+    <!-- Link to JavaScript -->
+    <script src="./script.js"></script>
 </body>
 </html>
