--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <main>
-
+        <h1>Self-Care Timer 💖⏰</h1>
+        <h2><span id="minutes">0</span> minutes and <span id="seconds">0</span> seconds left</h2>
     </main>
     <footer>
 
