--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <footer>
         <p>Made with 💕 by Allison Villa</p>
-        <p class="small-copy">You can view this app's code <a href="https://github.com/allisonvilla/self-care-timer">here</a></p>
+        <p class="small-copy">I built this app as a study tool - you can view its code <a href="https://github.com/allisonvilla/self-care-timer" target="_blank" rel="noopener noreferrer">here</a></p>
     </footer>
 
     <!-- Link to JavaScript -->
