saving progress before starting pause functionality

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
             <!-- Timer Input Form -->
             <form>
                 <label for="time-input">How many minutes will your focus-time be?</label>
-                <input type="number" name="time-input" id="time-input" value="25" required>
+                <input type="number" name="time-input" id="time-input" required>
                 <button id="time-btn">Start Timer</button>
             </form>
 
             <!-- Control Buttons -->
             <div class="control-buttons">
                 <button id="pause-btn">Pause Timer</button>
+                <button id="resume-btn">Resume Timer</button>
                 <button id="reset-btn">Reset Timer</button>
             </div> <!-- END .control-buttons -->
         </div> <!-- END .wrapper -->
