--- a/index.html
+++ b/index.html
@@ -35,13 +35,21 @@
                 <button id="resume-btn">Resume Timer</button>
                 <button id="reset-btn">Reset Timer</button>
             </div> <!-- END .control-buttons -->
+
+            <!-- Self Care Suggestion -->
+            <div class="self-care">
+                <h2><span id="care-starter"></span><span id="care-suggest"></span></h2>
+            </div> <!-- END .self-care -->
         </div> <!-- END .wrapper -->
     </main>
 
     <footer>
         <p>Made with 💕 by Allison Villa</p>
-        <p class="small-copy">I built this app as a study tool - you can view its code <a href="https://github.com/allisonvilla/self-care-timer" target="_blank" rel="noopener noreferrer">here</a></p>
+        <p class="small-copy">You can view this app's code <a href="https://github.com/allisonvilla/self-care-timer" target="_blank" rel="noopener noreferrer">here</a></p>
     </footer>
+
+    <!-- Audio element for timer completion -->
+    <audio src="./assets/fingerlicking-message-tone.mp3" preload="auto"></audio>
 
     <!-- Link to JavaScript -->
     <script src="./script.js"></script>
