saving progress on css

--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
         <p class="small-copy">You can view this app's code <a href="https://github.com/allisonvilla/self-care-timer" target="_blank" rel="noopener noreferrer">here</a></p>
     </footer>
 
-    <!-- Audio element for timer completion -->
+    <!-- Audio element for timer completion sound -->
     <audio src="./assets/notification-tone.mp3" preload="auto"></audio>
-
     <!-- Link to JavaScript -->
     <script src="./script.js"></script>
 </body>
